# nueva-esperanza-ml

./: .gitignore  Estructura del repositorio  README.md  pyproject.toml  requirements.txt
data/models/: stress_detector_v1.joblib  yield_predictor_v2.joblib
data/samples/: campo_5_2024.csv  sentinel_preview.tif
docs/: guia_tecnico_guatrache.md  guia_tecnico_guatrache_pd.md  protocolo_datos.md
notebooks/: 01_model_training.ipynb
scripts/: calibrate_drone.py  download_sentinel_offline.py  generate_drone_sample.py  generate_sample_sentinel.py  train_models.py
src/nuevaesperanza/: __init__.py
src/nuevaesperanza/cli/: main.py
src/nuevaesperanza/core/: irrigation_optimizer.py  stress_detector.py  yield_predictor.py
src/nuevaesperanza/io/: drone_processor.py  exporter.py  sentinel_loader.py
