[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nueva-esperanza-ml"
version = "2.0.0"
description = "ML para agricultura regada en Guatrache — Cooperativa Nueva Esperanza"
authors = [{name = "Cooperativa Nueva Esperanza", email = "contacto@nuevaesperanza.guatrache.lp.ar"}]
license = {text = "MIT Cooperative"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "pandas>=2.0",
    "rasterio>=1.3",
    "opencv-python>=4.8",
    "joblib>=1.3",
    "weasyprint>=61.0",
    "click>=8.1"
]

[project.scripts]
nuevaesperanza = "nuevaesperanza.cli.main:cli"
